pluma_parser/tests/snapshots/parse_success__identifier.snap
---
source: pluma_parser/tests/parse_success.rs
expression: cool
---

=== Source ===
cool

=== Comments ===
{}

=== AST ===
Module(0, 4) [
    TopLevelStatement(0, 4) Expr(
        ExprNode {
            pos: (
                0,
                4,
            ),
            kind: Identifier {
                ident: Ident(0, 4) "cool",
            },
            typ: Unknown,
        },
    ),
]

