pluma_parser/tests/snapshots/parse_success__identifier_not_ascii.snap
---
source: pluma_parser/tests/parse_success.rs
expression: こんにちは
---

=== Source ===
こんにちは

=== Comments ===
{}

=== AST ===
Module(0, 15) [
    TopLevelStatementNode {
        pos: (
            0,
            15,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    15,
                ),
                kind: Identifier {
                    ident: Ident(0, 15) "こんにちは",
                },
                typ: Unknown,
            },
        ),
    },
]

