pluma_parser/tests/snapshots/parse_success__intrinsic_def_binary_op_plus.snap
---
source: pluma_parser/tests/parse_success.rs
expression: intrinsic_def Int + Int -> Int
---

=== Source ===
intrinsic_def Int + Int -> Int

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        30,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                30,
            ),
            kind: IntrinsicDef(
                IntrinsicDefNode {
                    pos: (
                        0,
                        30,
                    ),
                    visibility: Public,
                    kind: BinaryOperator {
                        left: TypeIdentifierNode {
                            pos: (
                                14,
                                17,
                            ),
                            name: "Int",
                            generics: [],
                        },
                        op: OperatorNode {
                            pos: (
                                18,
                                19,
                            ),
                            name: "+",
                        },
                        right: TypeIdentifierNode {
                            pos: (
                                20,
                                23,
                            ),
                            name: "Int",
                            generics: [],
                        },
                    },
                    return_type: Some(
                        TypeExprNode {
                            pos: (
                                27,
                                30,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        27,
                                        30,
                                    ),
                                    name: "Int",
                                    generics: [],
                                },
                            ),
                            typ: Unknown,
                        },
                    ),
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

