pluma_parser/tests/snapshots/parse_success__labeled_tuple_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "(wow: 1,\n nice  :   2,\ncool:\n3)"
---

=== Source ===
(wow: 1,
 nice  :   2,
cool:
3)

=== Comments ===
{}

=== AST ===
Module(0, 31) [
    TopLevelStatement(0, 31) Expr(
        ExprNode {
            pos: (
                0,
                31,
            ),
            kind: LabeledTuple {
                entries: [
                    (
                        Ident(1, 4) "wow",
                        ExprNode {
                            pos: (
                                6,
                                7,
                            ),
                            kind: Literal {
                                literal: Literal(6, 7) IntDecimal(1),
                            },
                            typ: Unknown,
                        },
                    ),
                    (
                        Ident(10, 14) "nice",
                        ExprNode {
                            pos: (
                                20,
                                21,
                            ),
                            kind: Literal {
                                literal: Literal(20, 21) IntDecimal(2),
                            },
                            typ: Unknown,
                        },
                    ),
                    (
                        Ident(23, 27) "cool",
                        ExprNode {
                            pos: (
                                29,
                                30,
                            ),
                            kind: Literal {
                                literal: Literal(29, 30) IntDecimal(3),
                            },
                            typ: Unknown,
                        },
                    ),
                ],
            },
            typ: Unknown,
        },
    ),
]

