pluma_parser/tests/snapshots/parse_success__labeled_tuple_one_element.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "(aaa: \"wow\")"
---

=== Source ===
(aaa: "wow")

=== Comments ===
{}

=== AST ===
Module(0, 12) [
    TopLevelStatementNode {
        pos: (
            0,
            12,
        ),
        kind: Expr(
            ExprNode {
                pos: (
                    0,
                    12,
                ),
                kind: LabeledTuple {
                    entries: [
                        (
                            Ident(1, 4) "aaa",
                            ExprNode {
                                pos: (
                                    7,
                                    10,
                                ),
                                kind: Literal {
                                    literal: LiteralNode {
                                        pos: (
                                            7,
                                            10,
                                        ),
                                        kind: Str(
                                            "wow",
                                        ),
                                    },
                                },
                                typ: Unknown,
                            },
                        ),
                    ],
                },
                typ: Unknown,
            },
        ),
    },
]

