pluma_parser/tests/snapshots/parse_success__labeled_tuple_two_elements.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "(aaa: 1, bbb: \"wow\")"
---

=== Source ===
(aaa: 1, bbb: "wow")

=== Comments ===
{}

=== AST ===
Module(0, 20) [
    TopLevelStatement(0, 20) Expr(
        ExprNode {
            pos: (
                0,
                20,
            ),
            kind: LabeledTuple {
                entries: [
                    (
                        Ident(1, 4) "aaa",
                        ExprNode {
                            pos: (
                                6,
                                7,
                            ),
                            kind: Literal {
                                literal: Literal(6, 7) IntDecimal(1),
                            },
                            typ: Unknown,
                        },
                    ),
                    (
                        Ident(9, 12) "bbb",
                        ExprNode {
                            pos: (
                                15,
                                18,
                            ),
                            kind: Literal {
                                literal: Literal(15, 18) Str("wow"),
                            },
                            typ: Unknown,
                        },
                    ),
                ],
            },
            typ: Unknown,
        },
    ),
]

