pluma_parser/tests/snapshots/parse_success__let_pattern_identifier.snap
---
source: pluma_parser/tests/parse_success.rs
expression: let x = 47
---

=== Source ===
let x = 47

=== Comments ===
{}

=== AST ===
Module(0, 10) [
    TopLevelStatementNode {
        pos: (
            0,
            10,
        ),
        kind: Let(
            LetNode {
                pos: (
                    0,
                    10,
                ),
                pattern: PatternNode {
                    pos: (
                        4,
                        5,
                    ),
                    kind: Identifier(
                        Ident(4, 5) "x",
                        false,
                    ),
                },
                value: ExprNode {
                    pos: (
                        8,
                        10,
                    ),
                    kind: Literal {
                        literal: LiteralNode {
                            pos: (
                                8,
                                10,
                            ),
                            kind: IntDecimal(
                                47,
                            ),
                        },
                    },
                    typ: Unknown,
                },
            },
        ),
    },
]

