pluma_parser/tests/snapshots/parse_success__let_pattern_nested_tuples.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "let (a, _, (_, b)) = (47, something, tuple)"
---

=== Source ===
let (a, _, (_, b)) = (47, something, tuple)

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        43,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                43,
            ),
            kind: Let(
                LetNode {
                    pos: (
                        0,
                        43,
                    ),
                    pattern: PatternNode {
                        pos: (
                            4,
                            18,
                        ),
                        kind: Tuple(
                            [
                                PatternNode {
                                    pos: (
                                        5,
                                        6,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                5,
                                                6,
                                            ),
                                            name: "a",
                                        },
                                        false,
                                    ),
                                },
                                PatternNode {
                                    pos: (
                                        8,
                                        9,
                                    ),
                                    kind: Underscore,
                                },
                                PatternNode {
                                    pos: (
                                        11,
                                        17,
                                    ),
                                    kind: Tuple(
                                        [
                                            PatternNode {
                                                pos: (
                                                    12,
                                                    13,
                                                ),
                                                kind: Underscore,
                                            },
                                            PatternNode {
                                                pos: (
                                                    15,
                                                    16,
                                                ),
                                                kind: Identifier(
                                                    IdentifierNode {
                                                        pos: (
                                                            15,
                                                            16,
                                                        ),
                                                        name: "b",
                                                    },
                                                    false,
                                                ),
                                            },
                                        ],
                                    ),
                                },
                            ],
                        ),
                    },
                    value: ExprNode {
                        pos: (
                            21,
                            43,
                        ),
                        kind: UnlabeledTuple(
                            [
                                ExprNode {
                                    pos: (
                                        22,
                                        24,
                                    ),
                                    kind: Literal(
                                        LiteralNode {
                                            pos: (
                                                22,
                                                24,
                                            ),
                                            kind: IntDecimal(
                                                47,
                                            ),
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        26,
                                        35,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                26,
                                                35,
                                            ),
                                            name: "something",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                ExprNode {
                                    pos: (
                                        37,
                                        42,
                                    ),
                                    kind: Identifier(
                                        IdentifierNode {
                                            pos: (
                                                37,
                                                42,
                                            ),
                                            name: "tuple",
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                        ),
                        typ: Unknown,
                    },
                },
            ),
        },
    ],
}

