pluma_parser/tests/snapshots/parse_success__let_pattern_tuple.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "let (a, b) = (47, \"cool\")"
---

=== Source ===
let (a, b) = (47, "cool")

=== Comments ===
{}

=== AST ===
Module(0, 25) [
    TopLevelStatementNode {
        pos: (
            0,
            25,
        ),
        kind: Let(
            LetNode {
                pos: (
                    0,
                    25,
                ),
                pattern: PatternNode {
                    pos: (
                        4,
                        10,
                    ),
                    kind: UnlabeledTuple(
                        [
                            PatternNode {
                                pos: (
                                    5,
                                    6,
                                ),
                                kind: Identifier(
                                    Ident(5, 6) "a",
                                    false,
                                ),
                            },
                            PatternNode {
                                pos: (
                                    8,
                                    9,
                                ),
                                kind: Identifier(
                                    Ident(8, 9) "b",
                                    false,
                                ),
                            },
                        ],
                    ),
                },
                value: ExprNode {
                    pos: (
                        13,
                        25,
                    ),
                    kind: UnlabeledTuple {
                        entries: [
                            ExprNode {
                                pos: (
                                    14,
                                    16,
                                ),
                                kind: Literal {
                                    literal: LiteralNode {
                                        pos: (
                                            14,
                                            16,
                                        ),
                                        kind: IntDecimal(
                                            47,
                                        ),
                                    },
                                },
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    19,
                                    23,
                                ),
                                kind: Literal {
                                    literal: LiteralNode {
                                        pos: (
                                            19,
                                            23,
                                        ),
                                        kind: Str(
                                            "cool",
                                        ),
                                    },
                                },
                                typ: Unknown,
                            },
                        ],
                    },
                    typ: Unknown,
                },
            },
        ),
    },
]

